Bug #30389: connection_id() always return 0 in embedded server

Initialize thd->variables.pseudo_thread_id when a new embedded
thd is created.